# SIMTERFERE

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/: gravity_wavelengths_ft.txt  gravity_wavelengths_sc_highres.txt
data/V2PM/: GRAVI.2024-12-14T10_37_06.011_p2vm.fits  GRAVI.2024-12-20T10_15_08.289_p2vm.fits  GRAVI.2024-12-20T10_49_26.376_p2vm.fits
data/grid/: refraction_angle_PWV0.50mm_z39.715deg.txt  refraction_angle_PWV0.50mm_z41.751deg.txt  refraction_angle_PWV0.50mm_z43.787deg.txt  refraction_angle_PWV0.50mm_z45.824deg.txt  refraction_angle_PWV0.50mm_z47.860deg.txt  refraction_angle_PWV0.50mm_z49.896deg.txt  refraction_angle_PWV0.50mm_z51.932deg.txt  refraction_angle_PWV0.50mm_z53.968deg.txt  refraction_angle_PWV0.63mm_z39.715deg.txt  refraction_angle_PWV0.63mm_z41.751deg.txt  refraction_angle_PWV0.63mm_z43.787deg.txt  refraction_angle_PWV0.63mm_z45.824deg.txt  refraction_angle_PWV0.63mm_z47.860deg.txt  refraction_angle_PWV0.63mm_z49.896deg.txt  refraction_angle_PWV0.63mm_z51.932deg.txt  refraction_angle_PWV0.63mm_z53.968deg.txt  refraction_angle_PWV0.77mm_z39.715deg.txt  refraction_angle_PWV0.77mm_z41.751deg.txt  refraction_angle_PWV0.77mm_z43.787deg.txt  refraction_angle_PWV0.77mm_z45.824deg.txt  refraction_angle_PWV0.77mm_z47.860deg.txt  refraction_angle_PWV0.77mm_z49.896deg.txt  (+106 more)
examples/: analyze_offsets.ipynb  test.ipynb  tutorial.ipynb
simterfere/: config.py  fiber.py  refraction.py  simulation.py  telemetry.py  utils.py  visibility.py  wavefront.py
simterfere.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
